# S2AND

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  refactors.md  requirements.txt
.githooks/: pre-commit
.github/workflows/: main.yaml  release-rust.yml
docs/: README.md  bugs.md  caching.md  cluster_retrieval_experiment.md  data.md  development.md  environment.md  general_todo_plan.md  install.md  normalization_migration.md  normalization_migration_blocked.md  predict_incremental_fast_design.md  preprocessing_parallelism.md  production_inference.md  release_notes.md  reproducibility.md  stage_memory_estimates.md  subblocking.md  subclustering.md  threading.md  training.md  work_plan.md
docs/archive/: README.md
docs/rust/: README.md  arrow_dataset_spec.md  artifact_divergence.md  artifact_formats.md  baselines.md  inference_architecture.md  ingest_source_policy_inventory.md  public_surface_inventory.md  raw_block_query_candidate_plan.md  roadmap.md  runtime.md  training_preprocessing_plan.md
s2and/: __init__.py  arrow_inputs.py  arrow_schema_contract.json  consts.py  data.py  env.py  eval.py  feature_port.py  featurizer.py  file_cache.py  ingest_contract.py  memory_budget.py  memory_calibration.py  model.py  model_pairwise.py  mp.py  plotting_utils.py  production_bundle.py  production_model.py  runtime.py  rust_calls.py  rust_capabilities.py  rust_lifecycle.py  sampling.py  serialization.py  shap_utils.py  subblocking.py  text.py  thread_config.py  topic_split.py  warnings_utils.py
s2and/data/: production_model_v1.0.pickle  production_model_v1.1.pickle  production_model_v1.2.pickle  s2and_name_tuples.txt  s2and_name_tuples_filtered.txt
s2and/incremental_linking/: __init__.py  array_validation.py  artifact.py  contracts.py  feature_block.py  feature_block_arrow.py  feature_block_bridges.py  feature_block_contract.py  features.py  gate_buckets.py  linker_pairwise.py  logistic_gate.py  policy.py  production.py  query_adapter.py  retrieval.py  row_features.py  runtime.py
s2and/incremental_linking_training/: __init__.py  classic.py  data_loading.py  name_counts.py  query_support.py  retrieval_policy.py
s2and_rust/: Cargo.toml  README.md  __init__.py  build.rs  pyproject.toml
s2and_rust/s2and_rust/: __init__.py
s2and_rust/src/: arrow_batch_lookup.rs  constraints.rs  features.rs  ingest_dataset.rs  language_detection.rs  lib.rs  name_counts.rs  orcid.rs  pair_indexing.rs  promoted_linker.rs  raw_arrow_features.rs  raw_candidate_planner.rs  rayon_pool.rs  retrieval.rs  rust_featurizer.rs  subblocking.rs  text_compat.rs  text_unidecode_data.rs
s2and_rust/src/raw_arrow/: arrow_io.rs  mod.rs  paths.rs  readers.rs
scripts/: LLM_based_filtering_of_name_tuples.py  README.md  __init__.py  analyze_giant_block_subblocking.py  arrow_conversion_helpers.py  bench_paper_preprocess_pool.py  bench_preprocess_phases.py  compare_sinonym_overwrite.py  convert_inference_json_to_arrow.py  convert_s2and_mini_to_arrow.py  convert_to_arrow.py  custom_block_transfer_experiment_seed_paper.py  eval_cluster_retrieval.py  eval_prod_models.py  export_name_counts_for_rust.py  extract_big_block_dataset.py  find_largest_block.py  full_model_dump.py  generate_inventors_hf_specter_embeddings.py  generate_text_unidecode_data.py  get_name_counts.py  get_orcid_name_prefix_counts.py  make_classification_style.py  make_inventors_hf_specter_embeddings.py  make_inventors_s2and_subset.py  make_inventors_split_and_histograms.py  make_s2and_mini_dataset.py  make_triplets.py  paper_experiments.sh  profile_kisti_rust_prod.py  run_ci_locally.py  rust_suite.py  sota.py  sync_version.py  test_inventors_s2and.py  test_specter2.ipynb  test_specter2.py  transfer_experiment_internal.py  transfer_experiment_seed_paper.py  transform_all_datasets.py  (+2 more)
scripts/_rust_suite/: __init__.py  big_block_incremental_cmd.py  calibrate_cmd.py  calibrate_phase_a_cmd.py  calibrate_rust_batch_cmd.py  common.py  compare_cmd.py  featurizer_reuse_cmd.py  (+7 more)
tests/: conftest.py  helpers.py  linker_row_feature_reference.py  promoted_linking_helpers.py  test_arrow_batch_lookup_index.py  test_arrow_inputs.py  test_arrow_large_block_runtime.py  test_arrow_production_boundary.py  test_arrow_release_layout.py  test_arrow_schema_contract.py  test_audit_language_detector_parity.py  test_big_block_incremental_cmd.py  test_clean_linker_dataset_bundles.py  test_cluster.py  test_cluster_incremental.py  test_compare_cmd.py  test_compare_full_predict_arrow_parity.py  test_compare_graph_subblocking_arrow_quality.py  test_compare_python_vs_rust.py  test_consts.py  test_convert_inference_json_to_arrow.py  test_convert_s2and_mini_to_arrow.py  test_data.py  test_eps_sweep.py  test_eval.py  test_eval_cluster_retrieval.py  test_eval_prod_models.py  test_extract_big_block_dataset.py  test_feature_block.py  test_feature_cache_concurrency.py  test_feature_port_cache.py  test_feature_port_json_ingest_name_counts.py  test_feature_port_parity.py  test_feature_safe_view.py  test_featurizer.py  test_featurizer_pool_mode_defaults.py  test_featurizer_reuse_cmd.py  test_file_cache.py  test_generate_inventors_hf_specter_embeddings.py  test_hyperopt_integration.py  (+82 more)
(+61 files in other folders)
