[build-system]
requires = ["setuptools>=78.1.1,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2and"
dynamic = ["version"]
description = "S2AND"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergey Feldman, Daniel King, Shivashankar Subramanian" }]

# --- Runtime dependencies ---
dependencies = [
  "setuptools>=78.1.1,<82",
  "awscli>=1.44.38",
  "fasttext-wheel>=0.9.2",
  "pillow>=12.2.0",
  "pycld2>=0.41",
  "scikit-learn==1.7.1",
  "text-unidecode==1.3",
  "requests>=2.33.0,<3",
  "urllib3>=2.7.0",
  "hyperopt==0.2.7",
  "pandas>=1.5,<2.2",
  "lightgbm==4.6.0",
  "fastcluster>=1.2.6,<2",
  "genieclust>=1.1.4,<2",
  "matplotlib>=3.7,<3.9",
  "fonttools>=4.60.2",
  "seaborn>=0.12,<0.14",
  "tqdm>=4.64,<5",
  "strsimpy>=0.2,<0.3",
  "jellyfish>=0.9,<2",
  "numpy>=1.24,<2",
  "orjson>=3.11.6,<4",
  "pyasn1>=0.6.3",
  "shap>=0.45",
  "sinonym>=0.2.2",
  "pyarrow>=16,<19",
]

[project.optional-dependencies]
dev = [
  # Test stack
  "pytest==8.4.1",
  "pytest-cov>=4,<6",
  # Type checking
  "ty==0.0.18",
  # Linters/formatters
  "ruff==0.6.9",
  # Local Rust extension build tooling
  "maturin>=1.12.4",
  # CLI helpers used in some repos
  "click>=8,<9",
  "ipykernel",
]
rust = [
  "s2and-rust==0.51.1",
]

[tool.setuptools.packages.find]
include = ["s2and*"]
exclude = ["s2and_rust*"]

[tool.setuptools.package-data]
s2and = [
  "data/path_config.json",
  "data/first_k_letter_counts_from_orcid.json",
  "data/s2and_name_tuples.txt",
  "data/s2and_name_tuples_filtered.txt",
  "data/s2and_unnormalized_filtered_name_tuples.txt",
  "data/production_model_v1.0.pickle",
  "data/production_model_v1.1.pickle",
  "data/production_model_v1.2.pickle",
  "data/production_model_v*/manifest.json",
  "data/production_model_v*/clusterer.json",
  "data/production_model_v*/pairwise/metadata.json",
  "data/production_model_v*/pairwise/main.lgb",
  "data/production_model_v*/pairwise/nameless.lgb",
  "data/production_model_v*/pairwise/main_prediction_fixture.json",
  "data/production_model_v*/pairwise/nameless_prediction_fixture.json",
  "data/production_model_v*/incremental_linker/booster.lgb",
  "data/production_model_v*/incremental_linker/metadata.json",
  "data/production_model_v*/reproducibility/*.json",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

# ---- Tooling config ----

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "heavy: opt-in stress / integration tests; run with -m heavy",
    "requires_lfs: tests that require Git LFS artifacts to be materialized",
]

# Ruff config (used for lint + format)
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = []

[tool.uv.sources]
s2and-rust = { path = "s2and_rust" }

# ------------------------
# If you must replicate the *exact* legacy pins you sent, use this block instead
# of the loosened dependencies above (comment out the dependencies list above and
# paste these into it). This is *not* recommended long-term:
#
# "scikit-learn==1.2.2",
# "text-unidecode==1.3",
# "requests==2.24.0",
# "hyperopt==0.2.4",
# "pandas>=1.2",
# "lightgbm==3.0.0",
# "fastcluster==1.2.6",
# "genieclust==1.1.4",
# "matplotlib==3.7.1",
# "seaborn==0.12.2",
# "tqdm==4.49.0",
# "strsimpy==0.2.0",
# "jellyfish==0.8.2",
# "numpy==1.24.3",
# "orjson",
# "shap",
# "sinonym",
# "click>=7.1.2",
#
# And dev tools (old pins):
# dev = [
#   "pytest==8.4.1",
#   "pytest-cov==2.10.1",
#   "ruff==0.6.9",
#   "ty==0.0.18",
#   'importlib-metadata==4.13.0; python_version < "3.10"',
#   "click>=7.1.2",
# ]
# ------------------------
