[package]
name = "s2and_rust"
version = "0.50.0"
edition = "2021"

[lib]
name = "_s2and_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
numpy = "0.24"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
cld2 = "1.0.2"
fasttext = "0.7.8"
serde_json = "1.0"
arrow = { version = "54", default-features = false, features = ["ipc"] }

[patch.crates-io]
cld2 = { path = "vendor/cld2" }
